# mango_engine

./: .gitattributes  .gitignore  Cargo.toml  ios_run.sh
assets/PKG_A_Curtains/: NewSponza_1_Curtains_glTF.max
examples/game/: Cargo.toml
examples/game/src/: assets.rs  controls.rs  editor.rs  lib.rs  time.rs  ui.rs
examples/game/src/shader/: prism.wgsl  raytrace_prism.wgsl
mg_core/: Cargo.toml
mg_core/src/: lib.rs
mg_render/: Cargo.toml
mg_render/src/: GLTFLoader.rs  buffer.rs  camera.rs  g_buffer.rs  geometry.rs  gltf_loader.rs  gpu.rs  graphics.rs  instance.rs  irradiance_cache.rs  lib.rs  mango_window.rs  material.rs  mesh.rs  ray_buffer.rs  scene.rs  texture.rs  wgpu_ctx.rs
mg_render/src/global_illumination/: irradiance_cache.rs  mod.rs  ray_buffer.rs
mg_render/src/shader/: composition.wgsl  geometry.wgsl  raytrace.wgsl
mg_render/src/wgpu_context/: window.rs
